Remove get_position endpoint
