# src/score-service/endpoints.py
@@ -6,18 +6,10 @@ def health_check() -> dict:
         'status': 'ok'
     }
 
+
 def get_scores(chunk_size: int = None, level: int = None) -> list:
     return db.get_data(chunk_size, level)
 
 
-def get_position(score: int, level: int) -> dict:
-    return {
-        'position': 3
-    }
-
-
-def save_score(game_id: str, score: int, level: int, user_name: str) -> dict:
+def save_score(game_id: str, score: int, level: int, user_name: str) -> None:
     db.insert_data(game_id, score, level, user_name)
-    return {
-        'position': 30
-    }
